# ktp-filetransfer-handler

./: .kde-ci.yml  .reviewboardrc  AUTHORS  CMakeLists.txt  COPYING  Messages.sh  NEWS  README  TODO
po/bs/: ktp-filetransfer-handler.po
po/ca/: ktp-filetransfer-handler.po
po/ca@valencia/: ktp-filetransfer-handler.po
po/cs/: ktp-filetransfer-handler.po
po/da/: ktp-filetransfer-handler.po
po/de/: ktp-filetransfer-handler.po
po/el/: ktp-filetransfer-handler.po
po/en_GB/: ktp-filetransfer-handler.po
po/eo/: ktp-filetransfer-handler.po
po/es/: ktp-filetransfer-handler.po
po/et/: ktp-filetransfer-handler.po
po/eu/: ktp-filetransfer-handler.po
po/fi/: ktp-filetransfer-handler.po
po/fr/: ktp-filetransfer-handler.po
po/ga/: ktp-filetransfer-handler.po
po/gl/: ktp-filetransfer-handler.po
po/hu/: ktp-filetransfer-handler.po
po/ia/: ktp-filetransfer-handler.po
po/it/: ktp-filetransfer-handler.po
po/ja/: ktp-filetransfer-handler.po
po/ka/: ktp-filetransfer-handler.po
po/kk/: ktp-filetransfer-handler.po
po/ko/: ktp-filetransfer-handler.po
po/lt/: ktp-filetransfer-handler.po
po/mr/: ktp-filetransfer-handler.po
po/nb/: ktp-filetransfer-handler.po
po/nds/: ktp-filetransfer-handler.po
po/nl/: ktp-filetransfer-handler.po
po/nn/: ktp-filetransfer-handler.po
po/pl/: ktp-filetransfer-handler.po
po/pt/: ktp-filetransfer-handler.po
po/pt_BR/: ktp-filetransfer-handler.po
po/ro/: ktp-filetransfer-handler.po
po/ru/: ktp-filetransfer-handler.po
po/sk/: ktp-filetransfer-handler.po
po/sl/: ktp-filetransfer-handler.po
po/sr/: ktp-filetransfer-handler.po
po/sr@ijekavian/: ktp-filetransfer-handler.po
po/sr@ijekavianlatin/: ktp-filetransfer-handler.po
po/sr@latin/: ktp-filetransfer-handler.po
po/sv/: ktp-filetransfer-handler.po
po/tr/: ktp-filetransfer-handler.po
po/ug/: ktp-filetransfer-handler.po
po/uk/: ktp-filetransfer-handler.po
po/zh_CN/: ktp-filetransfer-handler.po
po/zh_TW/: ktp-filetransfer-handler.po
src/: CMakeLists.txt  KDE.FileTransfer.client  KTp.FileTransferHandler.client  filetransfer-handler.cpp  filetransfer-handler.h  handle-incoming-file-transfer-channel-job.cpp  handle-incoming-file-transfer-channel-job.h  handle-outgoing-file-transfer-channel-job.cpp  handle-outgoing-file-transfer-channel-job.h  ktp-fth-debug.cpp  ktp-fth-debug.h  main.cpp  org.freedesktop.Telepathy.Client.KDE.FileTransfer.service.in  org.freedesktop.Telepathy.Client.KDE.FileTransferHandler.service.in  org.freedesktop.Telepathy.Client.KTp.FileTransferHandler.service.in  telepathy-base-job.cpp  telepathy-base-job.h  telepathy-base-job_p.h  version.h.in
